--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,8 @@
 body {
   background-color: var(--zmp-background-color);
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .zaui-routes {
@@ -16,10 +18,9 @@ body {
   height: auto;
   margin-bottom: 0;
   flex: none;
-
-  &::after {
-    display: none;
-  }
+}
+.zaui-header::after {
+  display: none;
 }
 
 .zaui-input-affix-wrapper {
@@ -76,21 +77,20 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-
-  .zaui-tabs-tabbar {
-    flex: none;
-  }
-  .zaui-tab-content {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    overflow-y: auto;
-  }
-  .zaui-tab {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-  }
+}
+.category-tabs .zaui-tabs-tabbar {
+  flex: none;
+}
+.category-tabs .zaui-tab-content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow-y: auto;
+}
+.category-tabs .zaui-tab {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .swiper-pagination.swiper-pagination-horizontal {
@@ -103,20 +103,19 @@ body {
   border-radius: 100px;
   padding: 4px;
   bottom: 12px;
-
-  > .swiper-pagination-bullet {
-    width: 4px;
-    height: 4px;
-    margin: 0;
-    background: rgba(255, 255, 255, 0.6);
-
-    &.swiper-pagination-bullet-active {
-      background: #ffffff;
-      transform: scale(1.5);
-    }
-  }
 }
+.swiper-pagination.swiper-pagination-horizontal > .swiper-pagination-bullet {
+  width: 4px;
+  height: 4px;
+  margin: 0;
+  background: rgba(255, 255, 255, 0.6);
+}
+.swiper-pagination.swiper-pagination-horizontal > .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #ffffff;
+  transform: scale(1.5);
+}
+
 .zaui-bottom-navigation,
 .zaui-bottom-navigation-content {
   height: 70px;
-}
+}/*# sourceMappingURL=app.css.map */
