--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,7 @@
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 body {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: var(--zmp-background-color);
   user-select: none;
 }
@@ -119,4 +122,69 @@ body {
 .zaui-bottom-navigation,
 .zaui-bottom-navigation-content {
   height: 70px;
+}
+
+.pagination {
+  max-width: 100vw;
+  overflow-x: auto;
+  border: none;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+.page-link {
+  border: none;
+  font-size: 14px;
+  border-radius: 100%;
+}
+
+.rated-stars-s {
+  .star-ratings-css {
+    font-size: 1rem;
+  }
+}
+.rated-stars-m {
+  .star-ratings-css {
+    font-size: 2rem;
+  }
+}
+.rated-stars-l {
+  .star-ratings-css {
+    font-size: 2.5rem;
+  }
+}
+.rated-stars {
+  width: 70px;
+}
+.star-ratings-css {
+  unicode-bidi: bidi-override;
+  color: orange;
+  font-size: 1rem;
+  height: 25px;
+  position: relative;
+  // display: inline-flex;
+}
+.star-ratings-css::before {
+  content: "☆☆☆☆☆";
+  opacity: 0.7;
+}
+
+$ratevalues: 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5;
+@each $ratevalue in $ratevalues {
+  [data-rate="#{$ratevalue}"]::after {
+    width: calc(#{$ratevalue}* 20%);
+  }
+}
+.star-ratings-css::after {
+  color: orange;
+  content: "★★★★★";
+  position: absolute;
+  z-index: 1;
+  display: block;
+  left: 0;
+  top: 0;
+  width: attr(rating);
+  overflow: hidden;
 }
